<resources>
    <string name="dongji">动机网</string>
    <string name="app_name">动机市场</string>
    <string name="edit_choiceness_txt">推荐</string>
    <string name="recently_update_txt">新品</string>
    <string name="install_necessary_txt">必备</string>
    <string name="soft_channel_txt">分类</string>
    <string name="theme_recommend">专题</string>
    <string name="loading_txt">正在努力加载&#8230;</string>
    <string name="no_network_refresh_msg">网络未连接，请连接网络后点击屏幕刷新</string>
    <string name="request_data_error_msg">数据请求失败，请点击屏幕刷新</string>
    <string name="no_network_refresh_msg2">网络未连接，请连接网络后重试</string>
    <string name="request_data_error_msg2">数据请求失败，请检查网络</string>
    <string name="app_txt">应用</string>
    <string name="game_txt">游戏</string>
    <string name="input_search_keyword">输入关键字</string>
    <string name="input_keyword_please">请输入关键字</string>
    <string name="not_register_txt">还没有注册，</string>
    <string name="register_now_txt">立即注册</string>
    <string name="forget_password_txt">忘记密码</string>
    <string name="search_act">搜索</string>
    <string name="uninstall_act">卸载</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="install">安装</string>
    <string name="text1">共有</string>
    <string name="text2">个结果</string>
    <string name="last_item">已是最后一条</string>
    <string name="is_loading">正在加载…</string>
    <string name="resultiszero">共有0个结果</string>
    <string name="software_manage">软件管理</string>
    <string name="installed_software">已安装软件</string>
    <string name="software_move">软件搬家</string>
    <string name="phonecard">内存卡</string>
    <string name="sdcard">SD卡</string>
    <string name="movetophonecard">移至内存卡</string>
    <string name="movetosdcard">移至SD卡</string>
    <string name="noMoveToSDCardApp">内存卡中无可移至SD卡的应用</string>
    <string name="noMoveToPhoneCardApp">SD卡中无可移至内存卡的应用</string>
    <string name="title_choosetobackup">选择需要备份的应用</string>
    <string name="title_choosetorestore">选择需要恢复的应用</string>
    <string name="cloud_restore">云恢复</string>
    <string name="restore_text">恢复</string>
    <string name="cloud_restore_local">本地恢复</string>
    <string name="cloud_backup">云备份</string>
    <string name="backup_text">备份</string>
    <string name="backup_running_prompt">正在进行云备份,请稍后执行云恢复</string>
    <string name="restore_running_prompt">云恢复正在进行,请稍候再试</string>
    <string name="backgroup_backup">备份</string>
    <string name="backgroup_restore">恢复</string>
    <string name="local_backup">本地备份</string>
    <string name="local_restore">本地恢复</string>
    <string name="local_backuping">正在备份&#8230;</string>
    <string name="cloud_restoring">正在恢复&#8230;</string>
    <string name="toast_backuping">正在备份</string>
    <string name="backup_success">备份完成</string>
    <string name="toast_cloud_backuping">正在进行云备份</string>
    <string name="restore_success">恢复完成</string>
    <string name="toast_cloud_restoreing">正在进行云恢复</string>
    <string name="cloud_backup_local_tip">本地备份只会备份程序，不会备份您的个人数据，只限本手机使用。当您的手机格式化或更换手机后，使用恢复功能将不能恢复您的数据。</string>
    <string name="local_restore_tip">本地恢复将会恢复您之前备份的资料，此过程需要耗费一定的时间。</string>
    <string name="cloud_restore_prompt">云恢复将会恢复您之前备份的资料.此过程需要耗费大量的流量</string>
    <string name="choosebackuptype">请选择备份方式</string>
    <string name="chooserestoretype">请选择恢复方式</string>
    <string name="no_available_wifi">无可用wifi,无法使用此功能!</string>
    <string name="cloud_restore_rightnow">立即恢复</string>
    <string name="cloud_backup_rightnow">立即备份</string>
    <string name="cloud_restore_completed">云恢复已完成</string>
    <string name="cloud_backup_completed">云备份已完成</string>
    <string name="cloud_backup_failed">云备份失败</string>
    <string name="no_content">内容加载失败</string>
    <string name="app_version">版本:</string>
    <string name="app_size">大小:</string>
    <string name="app_review">动机点评：</string>
    <string name="app_uninstall">卸载</string>
    <string name="date_format">MM月dd日</string>
    <string name="update_install">更新和安装</string>
    <string name="transferring">正在传输</string>
    <string name="one_key_update">一键更新</string>
    <string name="can_update">可更新应用</string>
    <string name="can_update_to">可更新到</string>
    <string name="sprit">/</string>
    <string name="waitting_install">等待安装的应用</string>
    <string name="pause">暂停</string>
    <string name="update">更新</string>
    <string name="ignore">忽略</string>
    <string name="cancle_ignore">取消忽略</string>
    <string name="uninstall_dialog_prompt">将卸载该应用程序.</string>
    <string name="cancel">取消</string>
    <string name="uninstall_success">卸载成功</string>
    <string name="exit">退出</string>
    <string name="chooseapptobackup">选择应用备份</string>
    <string name="chooseapptorestore">选择应用恢复</string>
    <string name="noBackupApp">无可备份的应用</string>
    <string name="noRestoreApp">无可恢复的应用</string>
    <string name="app_delete">删除</string>
    <string name="no_sdcard">未检测到SD卡</string>
    <string name="has_installed">已安装</string>
    <string name="no_installed">未安装</string>
    <string name="app_destroyed">已损坏</string>
    <string name="del_success">删除成功！</string>
    <string name="setting">设置</string>
    <string name="normal_set">常规设置</string>
    <string name="update_msg">应用更新通知</string>
    <string name="auto_del_pkg">安装后自动删除安装包</string>
    <string name="auto_install">传输完自动安装程序</string>
    <string name="save_flow_text">开启节省流量模式</string>
    <string name="save_flow_prompt">在蜂窝数据环境下，APP列表不显示应用图标</string>
    <string name="set_root">设置root权限</string>
    <string name="get_root_failed">获取root权限失败</string>
    <string name="need_root">(需要root权限)</string>
    <string name="only_wifi">仅使用Wi-Fi传输数据</string>
    <string name="limit_flow">限制蜂窝数据流量</string>
    <string name="default_flow">50</string>
    <string name="M_flag">Mb</string>
    <string name="last_flow_text">剩余蜂窝数据流量为</string>
    <string name="limit_flow_too_large">最大值不能超过2048Mb</string>
    <string name="auto_download_background">自动后台下载</string>
    <string name="download_background_explain">退出程序后，自动下载未完成的程序</string>
    <string name="auto_update">自动更新应用</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="clear_record">清除记录</string>
    <string name="confirm_clear_record">确定清除所有搜索记录</string>
    <string name="has_clear_record">搜索记录已清除</string>
    <string name="del_pkg">删除已下载的安装包</string>
    <string name="del_pkg2">删除安装包</string>
    <string name="confirm_clear_pkgs">确定删除所有安装包</string>
    <string name="has_clear_pkgs">安装包已清除</string>
    <string name="twitter_set">使用第三方账号分享</string>
    <string name="use_sina_login">使用新浪微博登录</string>
    <string name="use_tencent_login">使用腾讯微博登录</string>
    <string name="use_renren_login">使用人人账号登录</string>
    <string name="forbid_sina_login">禁止使用新浪账号登录</string>
    <string name="unuse_sina_login">未使用新浪账号登录</string>
    <string name="user_name_text">账号名:</string>
    <string name="other_info">其它信息</string>
    <string name="about_feedback">关于/意见反馈</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_hint">请输入您的反馈意见</string>
    <string name="contact_way">联系方式(可选):</string>
    <string name="contact_hint">手机号/QQ/邮箱</string>
    <string name="submit">提交</string>
    <string name="about">关于</string>
    <string name="turn_on">打开</string>
    <string name="turn_off">关闭</string>
    <string name="no_network_msg">当前网络未连接，请连接网络后重新进入！</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="no_login_prompt">用户未登录,不能修改密码,请先登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="register">注 册</string>
    <string name="register_acount">注册账号</string>
    <string name="register_and_login">注册成功已自动登录</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_passwd">请输入密码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_new_pwd_repeat">请重复输入新密码</string>
    <string name="passwd_retake">找回密码</string>
    <string name="other_id_login">或使用其他账号登录</string>
    <string name="use_sina_acount">使用新浪微博账号登录</string>
    <string name="email_null">邮箱不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="email_format_error">邮箱格式不正确，请重新输入!</string>
    <string name="passwd_format_error">密码必须在6&#8211;8位字符内</string>
    <string name="forbid_modify_pwd">因您使用第三方登陆，无法修改密码</string>
    <string name="net_error">网络连接异常，请稍后重试</string>
    <string name="is_logining">正在登陆中…</string>
    <string name="cloud_nologinTip">您目前尚未登陆，只能使用</string>
    <string name="cloud_login_dialog_prompt">云备份/云恢复,需要登录后才能够使用,请先登录</string>
    <string name="auth_cancel">取消绑定</string>
    <string name="email_or_pwd_null">邮箱或密码为空</string>
    <string name="login_success">登陆成功</string>
    <string name="user_not_exist">用户不存在！</string>
    <string name="pwd_incorrect">密码错误</string>
    <string name="user_status_failed">会员注册登陆状态失败</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_timeout">登陆超时</string>
    <string name="net_conn_timeout">网络连接超时</string>
    <string name="commit_error">提交方式错误</string>
    <string name="register_success">注册成功</string>
    <string name="user_name_illegal">用户名不合法</string>
    <string name="include_sensitive_word">包含不允许注册的词语</string>
    <string name="user_exist">用户名已经存在</string>
    <string name="email_unallowed_reg">Email不允许注册</string>
    <string name="email_already_reg">该 Email已经被注册</string>
    <string name="add_user_failed">会员添加失败</string>
    <string name="pwd_discord">两次密码不一致</string>
    <string name="pwd_length_error">密码长度在6&#8211;15位之间</string>
    <string name="must_input">必填项不能为空</string>
    <string name="modify_success">修改成功</string>
    <string name="old_pwd_error">旧密码不正确</string>
    <string name="no_authority_modify">该用户受保护无权限更改</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_failed">提交失败</string>
    <string name="grade_success">打分成功</string>
    <string name="grade_failed">打分失败</string>
    <string name="is_committing">正在提交&#8230;</string>
    <string name="content_empty">反馈内容不能为空</string>
    <string name="feedback_success">反馈发送成功</string>
    <string name="feedback_failed">反馈发送失败</string>
    <string name="email_occupied_error">此邮箱已被使用了，请输入新的邮箱！</string>
    <string name="pwd_again">再次输入密码</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="pwd_unequal_error">您输入的密码不一致，请重新输入</string>
    <string name="is_registering">正在提交注册请求…</string>
    <string name="login_dialog_title">请输入密码完成注册</string>
    <string name="confirm_twitter_reg">完成使用微博注册账号</string>
    <string name="cancel_twitter_reg">取消使用微博注册账号</string>
    <string name="change_pwd">修改密码</string>
    <string name="change_pwd_success">密码修改成功！</string>
    <string name="pwd_retake_prompt">请输入您注册的邮箱，我们将密码重置的链接发送到您的邮箱里面</string>
    <string name="confirm">确定</string>
    <string name="email_testing">正在验证邮箱…</string>
    <string name="pwd_retake_timeout">网络连接超时，请稍后再找回密码</string>
    <string name="email_not_exist">邮箱不存在，请重新输入邮箱</string>
    <string name="send_email_success">邮件发送成功！</string>
    <string name="detail_apkVersion">版本：</string>
    <string name="detail_apkSize">大小：</string>
    <string name="detail_publishDate">时间：</string>
    <string name="detail_installCount">安装量：</string>
    <string name="dialog_setting">设置</string>
    <string name="dialog_tip_settingflow">请设置蜂窝数据值</string>
    <string name="dialog_tip_inputflow">请输入蜂窝数据值</string>
    <string name="DJ_app_center">动机市场</string>
    <string name="publish_date">发布日期：</string>
    <string name="version_info">版本信息：</string>
    <string name="copy_right_text1">动机科技　版权所有</string>
    <string name="copy_right_text2">Copyright©2013 DJ,Inc.</string>
    <string name="copy_right_text3">All Rights Reserved.</string>
    <string name="prompt_text">提示</string>
    <string name="network_not_conn">网络未连接&#8230;</string>
</resources>