<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login_dialog_bg"
        android:orientation="vertical"
        android:padding="10dip" >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/DJ_app_center"
            android:textColor="#333"
            android:textSize="17sp" />

        <View
            android:layout_width="250dip"
            android:layout_height="2dip"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:background="#33b5e5" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" >

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/publish_date"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/publish_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2012-07-18"
                    android:textColor="#333"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_info"
                    android:textColor="#333"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:textColor="#333"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="18dp"
            android:text="@string/copy_right_text1"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copy_right_text2"
            android:textColor="#333"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copy_right_text3"
            android:textColor="#333"
            android:textSize="15sp" />
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="60dip"
			android:layout_marginTop="20dip"
			android:gravity="center" >
	        <Button
	            android:id="@+id/about_confirm"
	            android:layout_width="150dip"
	            android:layout_height="40dip"
	            android:background="@drawable/button_has_border_selector"
	            android:text="@string/confirm"
	            android:textColor="@drawable/button_font_selector"
	            android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>