<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >
    
    <include
        android:id="@+id/login_top"
        layout="@layout/layout_feedback_top" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="@drawable/sharw" />
    
    <EditText 
        android:id="@+id/content_et"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@drawable/single_et_style"
        android:scrollbars="vertical"
        android:hint="@string/feedback_hint"
        android:textSize="17sp"
        android:gravity="top|left"/>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:textColor="#333"
            android:text="@string/contact_way"/>
        <EditText 
            android:id="@+id/contact_et"
            android:layout_height="45dp"
            android:layout_width="fill_parent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:background="@drawable/single_et_style"
            android:imeOptions="actionSend"
            android:textSize="17sp"
            android:hint="@string/contact_hint"/>
    </LinearLayout>
    
    <Button 
        android:id="@+id/submit_btn"
        android:layout_height="45dp"
        android:layout_width="fill_parent"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_has_border_selector"
        android:textColor="@drawable/button_font_selector"
        android:textSize="17sp"
        android:text="@string/submit"/>

</LinearLayout>