<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/ivApkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.0" >

        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvApkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvApkCurVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip" />
         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprit" />
          <TextView
            android:id="@+id/tvApkCurTotalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_update_to" />
            
            <TextView
                android:id="@+id/tvApkNewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprit" />

            <TextView
                android:id="@+id/tvApkNewTotalSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
        <ProgressBar
                android:id="@+id/pbUpdate"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btnIgnore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ignore"/>

    <Button
        android:id="@+id/btnUpdateAndCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />
    
    <Button
        android:id="@+id/btnCancelIgnore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/cancle_ignore" />

</LinearLayout>